# adventofcode24

./: .gitignore  Cargo.toml  README.txt
.devcontainer/: devcontainer.json
src/01/: main.rs  main2.rs
src/02/: main.rs  main2.rs
src/03/: main.rs  main2.rs
src/04/: main.rs  main2.rs
src/05/: main.rs
src/06/: main.rs  main2.rs
src/07/: main.rs  main2.rs
