[package]
name = "adventofcode24"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"

[[bin]]
name = "01main"
path = "src/01/main.rs"


[[bin]]
name = "01main2"
path = "src/01/main2.rs"

[[bin]]
name = "02main"
path = "src/02/main.rs"

[[bin]]
name = "02main2"
path = "src/02/main2.rs"

[[bin]]
name = "03main"
path = "src/03/main.rs"

[[bin]]
name = "03main2"
path = "src/03/main2.rs"


